@@ -1,1 +1,5 @@
 requires 'DateTime::Format::Strptime';
+
+on test => sub {
+   requires 'Test::More' => 1.001003;
+};
